--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
     <nav>
       <div class="navbar">
         <h1>Fitness</h1>
-      </div>
-
-      <div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+        <ul class="nav-links display-flex">
+          <li class="btn-home">Home</li>
+          <li>Service</li>
+          <li>Contact</li>
+          <li>About</li>
         </ul>
-        <i class="fa-solid fa-bars"></i>
+        <div class="hamberger"><i class="fa-solid fa-bars"></i></div>
       </div>
     </nav>
     <!-- navbar section Ends Here -->
