Training Box Added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="child-container">
           <div class="image-container1">
             <img
-              src="./images/exercise1.jpg"
+              src="./images/image 3.png"
               alt="Sample Image"
               class="circular-image"
             />
@@ -83,7 +83,7 @@
           </div>
           <div class="image-container2">
             <img
-              src="./images/exercise2.png"
+              src="./images/image 4.png"
               alt="Sample Image"
               class="circular-image"
             />
@@ -93,7 +93,7 @@
 
           <div class="image-container3">
             <img
-              src="./images/exercise3.png"
+              src="./images/image 2.png"
               alt="Sample Image"
               class="circular-image"
             />
@@ -103,7 +103,7 @@
 
           <div class="image-container4">
             <img
-              src="./images/exercise4.png"
+              src="./images/image 5.png"
               alt="Sample Image"
               class="circular-image"
             />
@@ -112,6 +112,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Run an Extra Section start Here -->
       <div class="main-container">
         <div class="title-part">
           <h1>Run an Extra <br />Mile Easily</h1>
@@ -127,6 +129,17 @@
         </div>
       </div>
       </main>
+      <!-- Run an Extra Section ends Here -->
+       <!-- Training Section Starts Here -->
+       <main>
+       <section class="training-container">
+        <h2>Trainings and Exercises</h2>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        
+       </section>
+      </main>
+        <!-- Training Section Ends Here -->
+       
 
       <!-- Table Section Start Here -->
       <div class="table-container">
