Tainer Section Name Required

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h3>Movement</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
-          <div class="image-container2">
+          <div class="image-container1">
             <img
               src="./images/image 4.png"
               alt="Sample Image"
@@ -91,7 +91,7 @@
             <p>We believe fitness should be accessible to everyone</p>
           </div>
 
-          <div class="image-container3">
+          <div class="image-container1">
             <img
               src="./images/image 2.png"
               alt="Sample Image"
@@ -101,7 +101,7 @@
             <p>We believe fitness should be accessible to everyone</p>
           </div>
 
-          <div class="image-container4">
+          <div class="image-container1">
             <img
               src="./images/image 5.png"
               alt="Sample Image"
@@ -135,8 +135,24 @@
        <section class="training-container">
         <h2>Trainings and Exercises</h2>
         <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <div>
+          <div class="row-1-images">
+            <img src="./images/exercise1.jpg" alt="">
+            <img src="./images/exercise2.png" alt="">
+            <img src="./images/exercise3.png" alt="">
+          </div>
+          <div class="row-2-images">
+            <img src="./images/exercise4.png" alt="">
+            <img src="./images/exercise5.jpg" alt="">
+            <img src="./images/exercise6.jpg" alt="">
+          </div>
+        </div>
         
        </section>
+       <div class="bmi-calculator5">
+        <h2>BMI Calculator</h2>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+       </div>
       </main>
         <!-- Training Section Ends Here -->
        
