Responsive part 2 Added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- fontawesome -->
     <script
       src="https://kit.fontawesome.com/52a0494f8f.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
     <!-- Style -->
     <link rel="stylesheet" href="./style/style.css" />
     <!-- responsive -->
@@ -67,17 +67,15 @@
       <section class="parents">
         <h1>Change Your Habits</h1>
         <p class="short-des">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste libero
+          Lorem ipsum dolor sit no adipisicing elit. Iste libero
           recusandae eligendi pariatur temporibus reprehenderit ad, facilis
           ullam, laudantium accusantium eum facere!
         </p>
         <div class="child-container">
           <div class="image-container1">
-            <img
+            <img class="circular-image"
               src="./images/image 3.png"
-              alt="Sample Image"
-              class="circular-image"
-            />
+              alt="Sample Image"/>
             <h3>Movement</h3>
             <p>We believe fitness should be accessible to everyone</p>
           </div>
@@ -85,30 +83,30 @@
             <img
               src="./images/image 4.png"
               alt="Sample Image"
-              class="circular-image"
-            />
+              class="circular-image"/>
             <h3>Time</h3>
             <p>We believe fitness should be accessible to everyone</p>
+          
           </div>
 
           <div class="image-container1">
             <img
               src="./images/image 2.png"
               alt="Sample Image"
-              class="circular-image"
-            />
-            <h3>Practice</h3>
-            <p>We believe fitness should be accessible to everyone</p>
+              class="circular-image"/>
+              <div class="practice">
+               <h3>Practice</h3>
+               <p>We believe fitness should be accessible to everyone</p>
+            </div>
           </div>
 
           <div class="image-container1">
             <img
               src="./images/image 5.png"
               alt="Sample Image"
-              class="circular-image"
-            />
-            <h3>Weight Loss</h3>
-            <p>We believe fitness should be accessible to everyone</p>
+              class="circular-image"/>
+                <h3>Weight Loss</h3>
+                <p>We believe fitness should be accessible to everyone</p>
           </div>
         </div>
       </section>
@@ -137,14 +135,15 @@
         <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
         <div>
           <div class="row-1-images">
-            <img src="./images/exercise1.jpg" alt="">
-            <img src="./images/exercise2.png" alt="">
-            <img src="./images/exercise3.png" alt="">
+            <div>
+            <img src="./images/exercise1.jpg" alt=""></div>
+            <div><img src="./images/exercise2.png" alt=""></div>
+            <div><img src="./images/exercise3.png" alt=""></div>
           </div>
           <div class="row-2-images">
-            <img src="./images/exercise4.png" alt="">
-            <img src="./images/exercise5.jpg" alt="">
-            <img src="./images/exercise6.jpg" alt="">
+            <div><img src="./images/exercise4.png" alt=""></div>
+            <div><img src="./images/exercise5.jpg" alt=""></div>
+            <div><img src="./images/exercise6.jpg" alt=""></div>
           </div>
         </div>
         
