Responsive for Iphone 14 Pro Max Done

--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
       <!-- Banner section Start Here -->
       <div class="banner">
         <div class="banner-left-container">
-          <h1>
-            Get body in
-            <span>shape</span> & stay healthy
-          </h1>
-          <p>
-            A huge selection of health and fitness content, healthy recipes and
-            transformation stories to help you get fit and stay fit!.
-          </p>
+          <div class="banner-title">
+            <h1 >
+              Get body in<span>shape</span>& stay healthy
+            </h1>
+            <p>
+              A huge selection of health and fitness content, healthy recipes and
+              transformation stories to help you get fit and stay fit!.
+            </p>
+          </div>
           <div class="btn-banner">
             <button class="banner-btn1">Join Club Now!</button>
             <button class="banner-btn2">Download App</button>
