All Section Responsive Done

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <h1>300+</h1>
             <p>Video tutorial</p>
           </div>
-          <div class="banner-child-3"></div>
+          <div class="banner-child-3">
+            <i class="fa-solid fa-play"></i>
+          </div>
         </div>
       </div>
     </nav>
@@ -189,13 +191,11 @@
           </table>
         </div>
         <div class="bmi-calculator-right">
-           <div>
             <h2>Calculate your BMI</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
               nesciunt, ducimus suscipit inventore enim cupiditate?
             </p>
-          </div>
 
             <div class="input-box1">
               <input id="input" type="text" placeholder="Height/cm" />
@@ -218,7 +218,7 @@
                 <option value="freelancer">Freelancer</option>
               </select>
             </div>
-            <button>Calculate</button>
+            <button class="cal-btn">Calculate</button>
       </main>
       </div>
       <!-- Our Team Section Start Here -->
