Bonus Section Added

--- a/index.html
+++ b/index.html
@@ -133,26 +133,65 @@
       <!-- Run an Extra Section ends Here -->
        <!-- Training Section Starts Here -->
        <main>
-       <section class="training-container">
-        <h2>Trainings and Exercises</h2>
-        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-        <div>
-          <div class="row-1-images">
-            <div>
-            <img src="./images/exercise1.jpg" alt=""></div>
-            <div><img src="./images/exercise2.png" alt=""></div>
-            <div><img src="./images/exercise3.png" alt=""></div>
+       <section class="training-packages-container">
+        <h1>Our Training Packages</h1>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. Join our gym today and get <span>50% discount</p>
+
+          <div class="packages-container">
+            <div class="packages-card-1">
+              <div class="card-1-heading">
+                <h2>৳ 3000 BDT</h2>
+                <p>Admission Fee</p>
+              </div>
+              <div class="card-1-footer">
+                <h1>৳1000</h1>
+                <p>Monthly Membership</p>
+                <button class="card-button">Join Now</button>
+                <h5>Join today : 40% off</h5>
+              </div>
+            </div>
+            <div class="packages-card-1">
+              <div class="card-1-heading">
+                <h2>৳ 3000 BDT</h2>
+                <p>Admission Fee</p>
+              </div>
+              <div class="card-1-footer">
+                <h1>৳2500</h1>
+                <p>3 Month Membership</p>
+                <button class="card-button">Join Now</button>
+                <h5>Join today : 40% off</h5>
+              </div>
+            </div>
+            <div class="packages-card-1">
+              <div class="card-1-heading">
+                <h2>৳ 3000 BDT</h2>
+                <p>Admission Fee</p>
+              </div>
+              <div class="card-1-footer">
+                <h1>৳4000</h1>
+                <p>6 Month Membership</p>
+                <button class="card-button">Join Now</button>
+                <h5>Join today : 40% off</h5>
+              </div>
+            </div>
+            <div class="packages-card-1">
+              <div class="card-1-heading">
+                <h2>৳ 3000 BDT</h2>
+                <p>Admission Fee</p>
+              </div>
+              <div class="card-1-footer">
+                <h1>৳500</h1>
+                <p>Yearky Membership</p>
+                <button class="card-button">Join Now</button>
+                <h5>Join today : 40% off</h5>
+              </div>
+            </div>
           </div>
-          <div class="row-2-images">
-            <div><img src="./images/exercise4.png" alt=""></div>
-            <div><img src="./images/exercise5.jpg" alt=""></div>
-            <div><img src="./images/exercise6.jpg" alt=""></div>
-          </div>
-        </div>
        </section>
       </main>
-       <!-- Training Section Ends Here -->
+       
       <!-- BMI Calculator Section Start Here -->
+       <main>
        <div class="bmi-calculator-heading">
         <h2>BMI Calculator</h2>
         <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
